--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body, html {
 }
 
 body {
-	background: url("https://img.freepik.com/free-vector/seamless-gold-rhombus-grid-pattern-black-background_53876-97589.jpg?w=900&t=st=1671217204~exp=1671217804~hmac=a4c109b060ec8f86f6b816a843629d5f8ba0a080c6cefddc101cc51f6d3f9ca4");
+	background: url("https://img.freepik.com/free-vector/abstract-dark-low-poly-background_1409-1860.jpg?w=900&t=st=1671469853~exp=1671470453~hmac=fe357eca385ceee10d1176740b7b1155180fd15d605661408e9dc854e6e64fd4");
 	background-size: cover;
 	background-repeat: no-repeat;
 
@@ -172,12 +172,19 @@ header {
 }
 
 .div_img_form {
-	width: 49%;
+	width: 48%;
 	height: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.img_form {
+	width: 80%;
 }
 
 .div_form_form {
-	width: 49%;
+	width: 48%;
 	height: auto;
 	padding: 20px 10px;
 }
@@ -195,10 +202,6 @@ header {
 	font-size: 14px;
 	color: gray;
 	margin-bottom: 10px;
-}
-
-.lista_form {
-
 }
 
 .item_form {
@@ -234,7 +237,6 @@ header {
 	border: none;
 	border-radius: 15px;
 	background-color: #cc3f3f;
-	font-size: 16px;
 	color: white;
 	cursor: pointer;
 }
@@ -245,6 +247,13 @@ header {
 
 /*============================SECTION VANTAGENS=======================*/
 
+.div_section_vantagens {
+	width: 60%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
 .div_title_vantagens {
 	width: 100%;
 	height: auto;
@@ -254,7 +263,7 @@ header {
 .lista_vantagens {
 	width: 100%;
 	height: auto;
-	padding: 30px 0;
+	padding: 50px 0px;
 	display: flex;
 	flex-wrap: nowrap;
 	justify-content: space-between;
@@ -266,9 +275,18 @@ header {
 	text-align: center;
 }
 
+.div_img_vantagem {
+	width: 100%;
+	height: auto;
+	display: flex;
+	flex-wrap: nowrap;
+	justify-content: center;
+	margin-bottom: 20px;
+}
+
 .img_vantagem {
-	width: 150px;
-	height: 150px;
+	width: 50%;
+	height: auto;
 }
 
 .title_vantagem {
@@ -318,8 +336,8 @@ header {
 }
 
 .div_text_dontMiss {
-	font-size: 20px;
-	font-family: 
+	font-size: 30px;
+	font-family: 'Anton', sans-serif;
 }
 
 .subtitle_dontMiss {
@@ -358,11 +376,22 @@ header {
 	width: 250px;
 	height: auto;
 	text-align: center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+.div_img_produto {
+	width: 100%;
+	height: auto;
+	display: flex;
+	flex-wrap: nowrap;
+	justify-content: center;
 }
 
 .img_produto {
-	width: 150px;
-	height: 150px;
+	width: 80%;
+	height: auto;
 }
 
 .title_produto {
