--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ body, html {
 body {
 	background: url("https://img.freepik.com/free-vector/abstract-dark-low-poly-background_1409-1860.jpg?w=900&t=st=1671469853~exp=1671470453~hmac=fe357eca385ceee10d1176740b7b1155180fd15d605661408e9dc854e6e64fd4");
 	background-size: cover;
-	background-repeat: no-repeat;
 
 	color: white;
 	font-size: 18px;
@@ -232,10 +231,10 @@ header {
 
 .submit_form {
 	width: 200px;
-	height: 35px;
+	height: 33px;
 	margin-top: 10px;
 	border: none;
-	border-radius: 15px;
+	border-radius: 10px;
 	background-color: #cc3f3f;
 	color: white;
 	cursor: pointer;
@@ -272,6 +271,7 @@ header {
 .item_vantagens {
 	width: 250px;
 	height: auto;
+	padding: 0 10px;
 	text-align: center;
 }
 
@@ -310,10 +310,10 @@ header {
 }
 
 .cadastrar_button {
-	width: 300px;
-	height: 45px;
+	width: 200px;
+	height: 35px;
 	border: none;
-	border-radius: 25px;
+	border-radius: 10px;
 	background-color: #cc3f3f;
 	color: white;
 	cursor: pointer;
@@ -375,10 +375,12 @@ header {
 .item_produtos {
 	width: 250px;
 	height: auto;
+	padding: 0 10px;
 	text-align: center;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+
 }
 
 .div_img_produto {
@@ -413,7 +415,7 @@ header {
 	width: 100%;
 	height: 35px;
 	border: none;
-	border-radius: 25px;
+	border-radius: 10px;
 	background-color: #cc3f3f;
 	color: white;
 	cursor: pointer;
@@ -423,3 +425,92 @@ header {
 	color: black;
 }
 
+/*============================RESPONSIVIDADE=======================*/
+
+@media(max-width: 1025px) {
+	.div_section_form, .div_section_vantagens, .div_section_fiquePorDentro {
+		width: 80%;
+	}
+
+	.div_section_form {
+		flex-wrap: wrap;
+	}
+
+	.div_img_form, .div_form_form {
+		width: 100%;
+	}
+
+	.img_form {
+		width: 30%;
+	}
+
+	.lista_form {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+
+	.item_form {
+		width: 48%;
+	}
+
+	.item_submit {
+		width: 48%;
+	}
+
+	.submit_form {
+		width: 100%;
+		height: 33px;
+		margin-top: 22px;
+	}
+}
+
+@media(max-width: 801px) {
+
+ 	.lista_vantagens, .lista_produtos {
+		flex-wrap: wrap;
+		justify-content: space-around;
+	}
+
+	.item_vantagens, .item_produtos {
+		width: 100%;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		border-bottom: 1px solid lightgray;
+		padding: 50px 0;
+	}
+
+	.img_vantagem, .img_produto {
+		width: 130px;
+	}
+
+	.title_vantagem, .title_produto {
+		width: 100%;
+	}
+	
+	.div_text_produto {
+		width: 100%;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+
+	.text_vantagem, .desc_produto {
+		width: 250px;
+	}
+
+	.button_desconto, .cadastrar_button {
+		width: 200px;
+	}
+}
+
+@media(max-width: 600px) {
+	.item_form, .item_submit {
+		width: 100%;
+	}
+
+	.submit_form {
+		width: 200px;
+	}
+}
